# ai-pdf-reader

./: AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
.github/workflows/: tauri-bundle.yml
scripts/: tauri-build.mjs
src/: app.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: pdf.js  ui.js
src/lib/: storage.js  utils.js
