[package]
name = "pdf-box-explorer"
version = "0.1.0"
description = "PDF Box Explorer desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "fs-read-file"] }
comrak = "0.23"
ammonia = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
